<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TextView
        android:id="@+id/text_add"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center_vertical"
        android:text="@string/post_story_caption"
        android:textColor="@color/ufo_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_placeholder_image_24"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_camera"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/camera_caption"
                app:layout_constraintEnd_toStartOf="@id/button_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_photo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_gallery"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gallery_caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_camera"
                app:layout_constraintTop_toBottomOf="@id/image_photo" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_white_form"
                android:drawablePadding="8dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/current_location_caption"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_add_location_24"
                app:layout_constraintTop_toBottomOf="@id/button_camera" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_white_form"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:hint="@string/description_caption"
                android:padding="12dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/text_location" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/post_caption"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_description" />

            <ProgressBar
                android:id="@+id/progress_bar_add"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/button_add"
                app:layout_constraintEnd_toEndOf="@id/button_add"
                app:layout_constraintStart_toStartOf="@id/button_add"
                app:layout_constraintTop_toTopOf="@id/button_add" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>