<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.story.detail.StoryDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo_story_desc"
                android:scaleType="fitXY"
                android:transitionName="@string/transition_imageview_detail_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="@string/transition_textview_detail_name"
            app:layout_constraintEnd_toEndOf="@id/card_photo"
            app:layout_constraintStart_toStartOf="@id/card_photo"
            app:layout_constraintTop_toBottomOf="@id/card_photo"
            tools:text="Dicoding Story" />

        <TextView
            android:id="@+id/text_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/card_photo"
            app:layout_constraintStart_toStartOf="@id/card_photo"
            app:layout_constraintTop_toBottomOf="@id/text_detail_name"
            tools:text="Sad Story" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>